--- a/receitas.html
+++ b/receitas.html
@@ -1,52 +1,70 @@
 <DOCTYPE html>
     <html>
-        <head>
-            <title>Receitas</title>
-        </head>
-        <body>
-            <h1>Coockies</h1>
-            <p>Biscoito delicioso para comer coma familia</p>
-            <h2>Ingredientes</h2>
-            <p>Voce só vai preciasr de :</p>
-            <ol>
-                <ul>
-                    <li>Manteiga</li>
-                    <li>Açucar mascavo</li>
-                    <li>Farinha de trigo</li>
-                    <li>Açucar</li>
-                    <li>Ovo</li>
-                    <li>Fermento em pó</li>
-                    <li>Essência de baunilha</li>
-                </ul>
-            </ol>
-            <table border="1">
-                <tr>
-                    <th>Ingredientes</th>
-                    <th>Quantidade</th>
-                </tr>
-                <tr>
-                    <td>125g de Manteiga</td>
-                    <td>1/2 xícara de farinha de trigo</td>
-                </tr>
-                <tr>
-                    <td>125g de Manteiga</td>
-                    <td>1/2 xícara de açucar mascavo</td>
-                </tr>
-                <tr>
-                    <td>1 e 3/4 de xícara de trigo</td>
-                    <td>3/4 de xícara de açucar</td>
-                </tr>
-                <tr>
-                    <td>1 ovo</td>
-                    <td>1 colher (chá) de Fermento em pó</td>
-                </tr>
-                <tr>
-                    <td>1 colher de Essência de baunilha</td>
-                    <td>300g de chocolate</td>
-                </tr>
-            </table>
-            <label for="historia">Deixe seu feedback:</label>
-            <input type="text" name="input" value="Digite aqui">
-        </body>
+
+    <head>
+        <title>Receitas</title>
+    </head>
+
+    <body>
+        <h1>Cockies</h1>
+        <p>Biscoito delicioso para comer com a familia</p>
+        <h2>Ingredientes</h2>
+        <p>Você só vai preciasr de :</p>
+        <ul>
+            <li>Manteiga</li>
+            <li>Açucar mascavo</li>
+            <li>Farinha de trigo</li>
+            <li>Açucar</li>
+            <li>Ovo</li>
+            <li>Fermento em pó</li>
+            <li>Essência de baunilha</li>
+            <li>Chocolate</li>
+        </ul>
+        <table border="1">
+            <tr>
+                <th>Ingredientes</th>
+                <th>Quantidade</th>
+            </tr>
+            <tr>
+                <td>Manteiga</td>
+                <td>125g </td>
+            </tr>
+            <tr>
+                <td>Açucar mascavo</td>
+                <td>1/2 xícara</td>
+            </tr>
+            <tr>
+                <td>Ovo</td>
+                <td>1 unidade</td>
+            </tr>
+            <tr>
+                <td>Chocolate Picado</td>
+                <td>300g</td>
+            </tr>
+            <tr>
+                <td>Farinha de trigo</td>
+                <td>1/2 xícara</td>
+            </tr>
+            <tr>
+                <td>Açucar Branco</td>
+                <td>3/4 de xícara</td>
+            </tr>
+            <tr>
+                <td>Fermento</td>
+                <td>1 colher</td>
+            </tr>
+            <tr>
+                <td>Essência Baunilha</td>
+                <td>1 colher (chá)</td>
+            </tr>
+        </table>
+        
+        <form>
+            <p>
+                <input type="text" placeholder="Digite aqui">
+            </p>
+            <label for="fedback">Deixe seu feedback</label>
+        </form>
+    </body>
     </html>
 </DOCTYPE>
